Revision history for {{$dist->name}}

{{$NEXT}}

1.0.10 2011-07-11T03:41:19Z
 [Packaging]
 - Retroactive Changes normalization

 [Tests]
 - Change git behaviour in the Minter test so git environment is always
   sane-ish and doesn't report weirdness.

1.0.9 2011-06-13T23:50:29Z
 [Dependencies::Test::New]
 - Capture::Tiny
 - File::pushd
 - FindBin
 - Path::Class
 - Test::DZil
 - Test::Fatal
 - Test::File::ShareDir
 - Test::Output

 [Features]
 - Comments out autoversion_relative fields in generated dist.ini as a move
   towards eliminating it.
 - Pre-Injects Abstract and Moose to new Modules.
 - Sets a custom template provider in the profile.

 [MiscFiles::New]
 - share/profiles/default/ModuleTemplate.pm, template for my modules.
 - corpus/global/config.ini,  a default "Global" configuaration for test
   purposes.

 [Tests::New]
 - 01-Minter.t, A reasonably exhaustive mint > build > testbuild domino
   test.

1.0.8 2011-06-12T22:41:51Z
 [Features]
 - No longer warns about unspecified Autoversion::Relative params when
   using Git::NextVersion

1.0.7 2011-04-24T13:45:19Z
 [Dependencies]
 - Depend on LWP::Protocol::https >= 6.0 to make sure ::Twitter works.

 [Utils]
 - Use CPAN::Changes 0.17 instead of hacking it ourself.

1.0.6 2011-04-13T13:15:49Z
 [Dependencies]
 - Removed Dist::Zilla::Plugin::CPANChangesTests
 - Added Dist::Zilla::Plugin::Test::CPAN::Changes

 [Features]
 - Replace CPANChangesTests with Test::CPAN::Changes

1.0.5 2011-04-03T15:21:54Z
 [Features]
 - Can now pass 'auto_prereqs_skip' instead of having to filter the bundle
   and mangle things.
 - Newly Minted Changes file is more formal and CPAN::Changes-like.

 [Packaging]
 - Now comes with utils/zuluize.pl to translate Dist::Zilla style
   datestamps to W3CDTF while retaining accuracy.
 - Now comes with utils/normalize.pl to run a Changes file through
   CPAN::Changes and normalize the output.
 - All code run through Perl::Tidy.

1.0.4 2011-04-03T12:08:53Z
 [Dependencies]