@@ -1,3 +1,0 @@
-[user]
-name = Anon Y. Mus
-email = anonymus@example.org
