@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Tests]
+ - Redo the git hack using ENV flags instead of a config file as it still
+   doesn't work as intended. Need both AUTHOR and CONFIG env variables.
+ - Minting test now more detailed with arbitrary pass indicators to
+   indicate where fails occur.
 
 1.0.10 2011-07-11T03:41:19Z
  [Packaging]
